--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             justify-content: center;
             min-height: 100vh;
             background-color: black;
-            font-family: "Kanit", cursive, sans-serif;
+            font-family: "Comic Sans MS", cursive, sans-serif;
             color: white;
             text-align: center;
         }
