--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             text-decoration: none;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
+            margin: 10px; /* Add spacing between buttons */
         }
 
         .button:hover {
@@ -62,6 +63,13 @@
     <!-- Button to Discord -->
     <a href="https://discord.gg/uGTWQNzhwu" class="button" target="_blank">
         Join Our Discord
+    </a>
+
+    <!-- Button to Google Docs -->
+    <a href="https://docs.google.com/document/d/1tW2nuRtUDiYpblubDdv1UA_FenOQVJY7trfpYtr5vds/edit?usp=sharing" 
+       class="button" 
+       target="_blank">
+        VERSIONS
     </a>
 
     <!-- JavaScript to change the tab title -->
